--- a/practice/index.html
+++ b/practice/index.html
@@ -8,25 +8,10 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header>
-      <h1>Javascrip Events</h1>
-    </header>
-    <main>
-      <ul id="Checklist">
-        <li>
-          <span>Apples</span>
-          <input value="Apples" />
-        </li>
-        <li>
-          <span>Orange</span>
-          <input value="Orange" />
-        </li>
-        <li>
-          <span>Bananas</span>
-          <input value="Banans" />
-        </li>
-      </ul>
-    </main>
+    <div>
+      <p></p>
+      <p></p>
+    </div>
     <script src="index.js"></script>
   </body>
 </html>
